--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         </ul>
       </header>
       <section>
+        <p>Every time when you want to add a new post for your Jekyll Blog, do you create file and copy paste the Front Matter? Or, you manually create files for the new React Component?</p>
+        <p>q·gen can generate new files or a folder of files from pre-defined templates.</p>
         <p><img src="https://github.com/alarisprime/qgen/raw/master/media/qgen-example-usge.gif" alt="Usage Example"></p>
 
 <h3>
