docs(gh-pages): correct name of q·gen to qgen

--- a/index.html
+++ b/index.html
@@ -1,58 +1,51 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>q·gen by alarisprime</title>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<title>qgen by alarisprime</title>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>q·gen</h1>
-        <p>q·gen generates files and folders from templates</p>
+		<link rel="stylesheet" href="stylesheets/styles.css">
+		<link rel="stylesheet" href="stylesheets/github-light.css">
+		<meta name="viewport" content="width=device-width">
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div class="wrapper">
+			<header>
+				<h1>qgen</h1>
+				<p>qgen generates files and folders from templates</p>
+				<p class="view"><a href="https://github.com/alarisprime/qgen">View the Project on GitHub <small>alarisprime/qgen</small></a></p>
+				<ul>
+					<li><a href="https://github.com/alarisprime/qgen/zipball/master">Download <strong>ZIP File</strong></a></li>
+					<li><a href="https://github.com/alarisprime/qgen/tarball/master">Download <strong>TAR Ball</strong></a></li>
+					<li><a href="https://github.com/alarisprime/qgen">View On <strong>GitHub</strong></a></li>
+				</ul>
+			</header>
+			<section>
+				<p>Every time when you want to add a new post for your Jekyll Blog, do you create file and copy paste the Front Matter? Or, you manually create files for the new React Component?</p>
+				<p>qgen can generate new files or a folder of files from pre-defined templates.</p>
+				<p><img src="https://github.com/alarisprime/qgen/raw/master/media/qgen-example-usge.gif" alt="Usage Example"></p>
 
-        <p class="view"><a href="https://github.com/alarisprime/qgen">View the Project on GitHub <small>alarisprime/qgen</small></a></p>
+				<h3><a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h3>
 
+				<div class="highlight highlight-source-shell"><pre>$ npm install -g qgen </pre></div>
 
-        <ul>
-          <li><a href="https://github.com/alarisprime/qgen/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/alarisprime/qgen/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/alarisprime/qgen">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <p>Every time when you want to add a new post for your Jekyll Blog, do you create file and copy paste the Front Matter? Or, you manually create files for the new React Component?</p>
-        <p>q·gen can generate new files or a folder of files from pre-defined templates.</p>
-        <p><img src="https://github.com/alarisprime/qgen/raw/master/media/qgen-example-usge.gif" alt="Usage Example"></p>
+				<h3><a id="user-guide" class="anchor" href="#user-guide" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>User Guide</h3>
 
-<h3>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h3>
+				<p><a href="https://github.com/alarisprime/qgen/blob/master/README.md#usage">How to use qgen?</a></p>
 
-<div class="highlight highlight-source-shell"><pre>$ npm install -g qgen </pre></div>
+				<h3><a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<h3>
-<a id="user-guide" class="anchor" href="#user-guide" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>User Guide</h3>
-
-<p><a href="https://github.com/alarisprime/qgen/blob/master/README.md#usage">How to use q·gen?</a></p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>Saneef Ansari (<a href="https://github.com/saneef" class="user-mention">@saneef</a>)</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/alarisprime">alarisprime</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+				<p>Saneef Ansari (<a href="https://github.com/saneef" class="user-mention">@saneef</a>)</p>
+			</section>
+			<footer>
+				<p>This project is maintained by <a href="https://github.com/alarisprime">alarisprime</a></p>
+				<p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+			</footer>
+		</div>
+		<script src="javascripts/scale.fix.js"></script>
+	</body>
 </html>
